--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,11 @@
-# FROM node:16-alpine
+FROM node:16-alpine
 
-#  ...
+WORKDIR /app
+
+COPY . .
+
+RUN npm install
+
+EXPOSE 3001
+
+CMD ["npm", "start"]
